GRPC completed and passing tests
